fix(ui): tweak input background in dark mode and better loading component (#5656)

--- a/ui/src/index.css
+++ b/ui/src/index.css
@@ -197,7 +197,7 @@
   input[type='number'],
   input[type='date'],
   input[type='time'] {
-    @apply min-h-9;
+    @apply bg-input/60 border-input focus:border-brand focus:ring-brand disabled:bg-muted disabled:text-muted-foreground min-h-9 rounded-md shadow-xs disabled:cursor-not-allowed sm:text-sm;
   }
 
   input[type='radio'] {
